# GJALLARHORN

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  overview.dot
gjallarhorn/: Cargo.toml
gjallarhorn/src/: main.rs
kafka-build/: docker-compose-single-broker.yml
poc/: Dockerfile  app.ts  package.json  tsconfig.json
rust-boot/: Cargo.toml  Dockerfile
rust-boot/src/: main.rs
