[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "gjallarhorn"
version = "0.1.0"

[dependencies]
kafka = "0.7.0"
rdkafka = "0.17.0"
regex = "1.0.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
telegram-bot = "0.6.1"
tokio-core = "0.1.17"
urlshortener = "0.9.0"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
